public/landingLogin.css
img {
   height: 100%;
   width: 100%;
   object-fit: cover;
}

html,
body {
   height: 100%;
   width: 100%;
   position: relative;
   overflow: hidden;
}

#headerText {
   color: plum;
   font-size: 70px;
}

form {
   z-index: 1;
   border-radius: 3px 3px 3px 3px;
   padding: 25px;
   font-size: 2em;
   background-color: rgb(237, 237, 237);
   background-color: hsla(0, 0%, 93%, 0.808);
   width: auto;
   top: 30%;
   left: 25%;
   right: 25%;
   position: fixed;
}

/* keeps this behind all content */

.carousel-item {
   height: 100vh;
   min-height: 300px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
}

.carousel-inner {
   z-index: -4;
   width: 100%;
   height: 100%;
   z-index: 0;
   overflow: hidden;
   position: fixed;
}

